# dialectal_arabic_tools

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
data/: all.trg.conll  glf.trg
dialectal_arabic_tools/: __init__.py  cli.py  segmentation.py
dialectal_arabic_tools/data/: example.in.txt  example.out.txt
dialectal_arabic_tools/segmentation/: builder.py  segmenter.py
dialectal_arabic_tools/segmentation/files/dataset/egy/: data_1.dev.conll  data_1.dev.trg  data_1.test.conll  data_1.test.trg  data_1.train.conll  data_1.train.trg  data_2.dev.conll  data_2.dev.trg  data_2.test.conll  data_2.test.trg  data_2.train.conll  data_2.train.trg  data_3.dev.conll  data_3.dev.trg  data_3.test.conll  data_3.test.trg  data_3.train.conll  data_3.train.trg  data_4.dev.conll  data_4.dev.trg  data_4.test.conll  data_4.test.trg  data_4.train.conll  data_4.train.trg  data_5.dev.conll  data_5.dev.trg  (+4 more)
dialectal_arabic_tools/segmentation/files/models/: dialectal_segmenter.hdf5  joint.seg.fold01.hdf5  joint.seg.fold02.hdf5  joint.seg.fold03.hdf5  joint.seg.fold04.hdf5  joint.seg.fold05.hdf5  joint06.hdf5  joint07.hdf5  seg_keras_model_0922.hdf5  segmenter.hdf5
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
files/: egy.trg  lev.trg  magh.trg
scripts/: utils.py
tests/: __init__.py  test_dialectal_arabic_tools.py  test_segmentation.py
(+95 files in other folders)
